<resources>
    <string name="app_name">Buhat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_bar">Name</string>
    <string name="address_bar">Address</string>
    <string name="count_piple_in_bar">Count</string>
    <string name="link">Link</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
</resources>
